--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -36,7 +36,7 @@ Stonehenge = Stonehenge
 
 Library = Biblioteka
 +1 Science Per 2 Population = +1 do nauki na 2 obywateli
-Paper Maker = Wytwórca papieru
+Paper Maker = Wytwórnia papieru
 
 The Great Library = Wielka Biblioteka
 Free Technology = Darmowa technologia
@@ -398,7 +398,7 @@ Luxury resources = Zasoby luksusowe
 Strategic resources = Zasoby strategiczne
 replaces = zastępuje
 [resourceName] not required = [resourceName] nie jest wymagane/ny
-Lost ability = Utracona zdolność
+Lost ability = Utracona zdolność 
 National ability = Zdolność narodowa
 
 # Nations
@@ -425,7 +425,7 @@ Elizabeth = Elżbieta
 
 France = Francja
 Napoleon = Napoleon
-+2 Culture per turn from cities before discovering Steam Power = +2 Kultury na turę od miast przed odkryciem Energi Parowej
++2 Culture per turn from cities before discovering Steam Power = +2 do Kultury na turę od miast przed odkryciem Energi Parowej
 
 Russia = Rosja
 Catherine = Katarzyna
@@ -437,11 +437,11 @@ Augustus Caesar = Gajusz Juliusz Cezar
 
 Arabia = Arabia
 Harun al-Rashid = Harun ar-Raszid
-+1 Gold from each Trade Route, Oil resources provide double quantity = +1 Złota za każdy Szlak Handlowy, zasoby Ropy zapewnia podwojoną ilość
++1 Gold from each Trade Route, Oil resources provide double quantity = +1 do Złota za każdy Szlak Handlowy, zasoby Ropy zapewnia podwojoną ilość
 
 America = Ameryka
 George Washington = George Washington
-All land military units have +1 sight, 50% discount when purchasing tiles = Wszystkie naziemne jednostki wojskowe otrzymują +1 do wzroku, 50% zniżki podczas zakupu pola
+All land military units have +1 sight, 50% discount when purchasing tiles = Wszystkie naziemne jednostki wojskowe otrzymują +1 do wizji, 50% zniżki podczas zakupu pola
 
 Japan = Japonia
 Oda Nobunaga = Oda Nobunaga
@@ -453,15 +453,15 @@ Otto von Bismark = Otto von Bismarck
 
 India = Indie
 Gandhi = Mahatma Gandhi
-Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = Niezadowolenie mieszkańców Miast podwoiło się, Niezadowolenie mieszkańców Miast zmalało o połowę.
+U. = Niezadowolenie z powodu liczby Miast podwoiło się, Niezadowolenie z powodu liczby obywateli Miast zmalało o połowę.
 
 The Ottomans = Imperium Osmańskie
 Suleiman I = Sulejman I
-Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units. = Zapłać trzecią część zwykłego kosztu za utrzymanie jednostki morskiej. Morskie jednostki do walki w zwarciu mają 1/3 szansy na przejęcie pokonanych jednostek morskich.
+Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units. = Płacisz tylko jedną trzecią zwykłych kosztów utrzymania jednostki marynarki wojennej. Jednostki morskie walczące w zwarciu mają 1/3 szansy na przejęcie pokonanych jednostek morskich.
 
 Korea = Korea
 Sejong = Sejong
-+2 Science for all specialists and Great Person tile improvements = +2 Nauki dla wszystkich specjalistów i polepszenie pola Wielkiej Osoby
++2 Science for all specialists and Great Person tile improvements = +2 do Nauki za wszystkich specjalistów i ulepszenia pól Wielkiej Osoby
 
 Iroquois = Irokezi
 Hiawatha = Hiawatha
@@ -473,15 +473,15 @@ Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and 
 
 Polynesia = Polinezja
 Kamehameha I = Kamehameha I
-Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = Możesz zaokrętować i ruszyć na Wybrzeża natychmiast. +1 do Wzroku po zaokrętowaniu. +10% Siły w walce w obrębie 2 pól od Moai.
+Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = Możesz wejść w stan okrętu i poruszać się przy Wybrzeżach i nad Oceanem. +1 do Wizji po wejściu w stan okrętu. +10% Siły w walce w obrębie 2 pól od Moai.
 
 Siam = Siam
 Ramkhamhaeng = Ramkhamhaeng
-Food and Culture from Friendly City-States are increased by 50% = Zasoby Pożywienia i Kultura od Przyjaznych Miast-Państw są ziwiększone o 50%
+Food and Culture from Friendly City-States are increased by 50% = Zasoby Pożywienia i Kultura od Przyjaznych Miast-Państw są zwiększone o 50%
 
 Songhai = Songhaj
 Askia = Asika
-Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Odtrymaj potrojone Złoto od Barbażyńskich obozowisk i plądrowanych Miast. Zaokrętowane jednostki mogą same się bronić
+Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Odtrzymaj potrojone Złoto od Barbażyńskich obozowisk i plądrowanych Miast. Jednostki w trybie okrętu mogą same się bronić
 
 Spain = Hiszpania
 Isabella = Izabella
@@ -494,7 +494,7 @@ Promotions = Awanse
 Barbarians = Barbażyńcy
 Load copied data = Wczytaj skopiowane dane
 Could not load game from clipboard! = Nie można wczytać danych ze schowka!
-Start game! = Zacznij grę:
+Start game! = Zacznij grę!
 Map options = Ustawienia mapy
 Game options = Ustawienia gry
 Map type = Rodzaj mapy
@@ -503,8 +503,8 @@ Existing = Istniejące
 Map generation type = Typ generowania mapy
 Number of city-states = Liczba miast-państw
 One City Challenge = Wyzwanie z limitem 1 miasta
-No barbarians = Brak barbarzyńców
-No ancient ruins = Bez antycznych ruin
+No barbarians = Brak Barbarzyńców
+No ancient ruins = Bez Antycznych Ruin
 No Natural Wonders = Bez Cudów Natury 
 Victory conditions = Warunki zwycięstwa
 Scientific = Naukowe
@@ -599,7 +599,7 @@ Downloading... = Pobieranie...
 Could not download music! = Nie udało się pobrać muzyki!
 Show = Pokaż
 Hide = Ukryj
-Show worked tiles = Pokaż pracujące pola
+Show worked tiles = Pokaż robocze pola
 Show resources and improvements = Pokaż zasoby i ulepszenia
 Check for idle units = Sprawdź jednostki czekające na rozkazy
 Move units with a single tap = Przemieść jednostki jednym dotykiem
@@ -711,7 +711,7 @@ Fortification = Umocnienia
 Sleep = Uśpij
 Moving = W ruchu
 Set up = Przygotowane
-Upgrade to [unitType] ([goldCost] gold) = Ulepsz do [unitType] ([goldCost] gold)
+Upgrade to [unitType] ([goldCost] gold) = Ulepsz do [unitType] ([goldCost]) złota)
 Found city = Załóż miasto
 Promote = Awansuj
 Health = Zdrowie
@@ -1386,7 +1386,7 @@ Brute = Brutal
 Warrior = Wojownik
 Maori Warrior = Wojownik Maori
 Archer = Łucznik
-Bowman = Łucznik
+Bowman = Łucznikarz
 Work Boats = Łodzie robotnicze
 Cannot enter ocean tiles until Astronomy = Nie może wejść na pole oceanu do momentu odblokowania Astronomi
 May create improvements on water resources = Może budować ulepszenia na wodnych zasobach
@@ -1510,12 +1510,12 @@ Bonus for units in 2 tile radius 15% = +15% do walki dla jednostek w zasięgu 2 
 Pick promotion = Awansuj jednostkę
  OR  = LUB 
 Bonus vs [unitType] = Bonus przeciwko [unitType]
-Penalty vs [unitType] = Słaboś przeciwko [unitType]
+Penalty vs [unitType] = Słabość przeciwko [unitType]
 Accuracy I = Celność I
 Accuracy II = Celność II
 Accuracy III = Celność III
-units in open terrain = jednostek na otwartej przestrzeni
-units in rough terrain = jednostek na trudnym terenie
+units in open terrain = jednostki na otwartej przestrzeni
+units in rough terrain = jednostki na trudnym terenie
 Barrage I = Zapora I
 Barrage II = Zapora II
 Barrage III = Zapora III
