--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -923,6 +923,8 @@ May contain [listOfResources] = Může obsahovat [listOfResources]
 Upgrades to [upgradedUnit] = Vylepšení na [upgradedUnit]
 Obsolete with [obsoleteTech] = Zastará (přestane půspbit) s [obsoleteTech]
 Occurs on [listOfTerrains] = Nalézá se v/na [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Může se objevit v/na 
 Improved by [improvement] = Vylešen(a/o) díky [improvement]
 Bonus stats for improvement:  = Bonusové statistiky pro vylepšení:
@@ -1327,6 +1329,12 @@ Cerro de Potosi =
  # Requires translation!
 El Dorado = 
 Fountain of Youth = Fontána mládí
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
