--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1517,6 +1517,8 @@ Obsolete with [obsoleteTech] =
  # Requires translation!
 Occurs on [listOfTerrains] = 
  # Requires translation!
+Placed on [terrainType] = 
+ # Requires translation!
 Can be found on  = 
  # Requires translation!
 Improved by [improvement] = 
@@ -2158,6 +2160,12 @@ Cerro de Potosi =
 El Dorado = 
  # Requires translation!
 Fountain of Youth = 
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
