--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -912,6 +912,8 @@ May contain [listOfResources] = Peut contenir [listOfResources]
 Upgrades to [upgradedUnit] = Améliorer en [upgradedUnit]
 Obsolete with [obsoleteTech] = Obsolète avec [obsoleteTech]
 Occurs on [listOfTerrains] = Doit possèder [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Peut être trouver sur 
 Improved by [improvement] = Amélioré par [improvement]
 Bonus stats for improvement:  = Bonus de case améliorée: 
@@ -1294,6 +1296,12 @@ Rock of Gibraltar = Rocher de Gibraltar
 Cerro de Potosi = Cerro de Potosi
 El Dorado = El Dorado
 Fountain of Youth = Fontaine de Jouvence
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
