--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -401,7 +401,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 # City states
 
  # Requires translation!
-Provides [amountOfCulture] culture at [30] Influence = 
+Provides [amountOfCulture] culture at 30 Influence = 
  # Requires translation!
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 
  # Requires translation!
@@ -1442,6 +1442,8 @@ Obsolete with [obsoleteTech] =
  # Requires translation!
 Occurs on [listOfTerrains] = 
  # Requires translation!
+Placed on [terrainType] = 
+ # Requires translation!
 Can be found on  = 
  # Requires translation!
 Improved by [improvement] = 
@@ -2174,6 +2176,12 @@ Cerro de Potosi =
 El Dorado = 
  # Requires translation!
 Fountain of Youth = 
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
