--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -910,7 +910,8 @@ Cost = Costo
 May contain [listOfResources] = Può contenere [listOfResources]
 Upgrades to [upgradedUnit] = Aggiorna a [upgradedUnit]
 Obsolete with [obsoleteTech] = Diventa obsoleta con [obsoleteTech]
-Occurs on [listOfTerrains] = Può avvenire/avviene su [listOfTerrains]
+Occurs on [listOfTerrains] = Si può trovare su [listOfTerrains]
+Placed on [terrainType] = Si trova su [terrainType]
 Can be found on  = Può trovarsi su
 Improved by [improvement] = Può essere migliorato/a da [improvement]
 Bonus stats for improvement:  = Bonus per miglioramento: 
@@ -1292,14 +1293,12 @@ Old Faithful = Old Faithful
 Rock of Gibraltar = Rocca di Gibilterra
 Cerro de Potosi = Cerro Rico de Potosí
 El Dorado = El Dorado
-500 Gold to the first civilization to discover it = 500 Oro per la prima civiltà che la scopre per prima
 Fountain of Youth = Fonte della giovinezza
-Adjacent military land units heal at double rate for the rest of the game = Cura tutte le unità militari terrestri adiacenti per il resto della partita
 
-# Smashfanful suggestion: all these next two lines need to be in one popup message when you discover a Natural Wonder, three if in case with El Dorado
-Congratulations! The discovery of [naturalWonder] has increased the Happiness in the Empire. = Congratulazioni! Hai scoperto [naturalWonder], il che ha incrementato la Felicità nel tuo impero.
-Output if worked:  = Resa se sfruttata: 
-For finding this wonder first you have gained [goldAmount] = Ottieni [goldAmount] per aver trovato la Meraviglia per primo
+# Natural Wonders Uniques
+
+Grants 500 Gold to the first civilization to discover it = Fornisce 500 Oro per la prima civiltà a scoprirla
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Fornisce Ringiovanimento (tutti gli effetti di cura raddoppiati) alle unità militari terrestri adiacenti per il resto della partita
 
 # Resources
 
