--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -947,6 +947,8 @@ May contain [listOfResources] = [listOfResources] 자원을 포함할 수 있음
 Upgrades to [upgradedUnit] = [upgradedUnit](으)로 업그레이드 가능
 Obsolete with [obsoleteTech] = [obsoleteTech] 연구 후 생산 불가
 Occurs on [listOfTerrains] = [listOfTerrains]에서 생길 수 있음
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = 발견 가능한 지형 : 
 Improved by [improvement] = [improvement]로 개발 가능
 Bonus stats for improvement:  = 개발할 경우 추가로 
@@ -1359,6 +1361,12 @@ Cerro de Potosi =
 El Dorado = 
  # Requires translation!
 Fountain of Youth = 
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
