--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -924,6 +924,8 @@ May contain [listOfResources] = 可能拥有下列资源：[listOfResources]
 Upgrades to [upgradedUnit] = 可升级为[upgradedUnit]
 Obsolete with [obsoleteTech] = 研发下列科技后过时：[obsoleteTech]
 Occurs on [listOfTerrains] = 可能出现在以下地形：[listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = 可能发现该资源的地形地貌：
 Improved by [improvement] = 开发该资源所需设施：[improvement]
 Bonus stats for improvement:  = 开发该资源后设施所获奖励效果：
@@ -1325,6 +1327,12 @@ Rock of Gibraltar = 直布罗陀巨岩
 Cerro de Potosi = 富饶山
 El Dorado = 黄金国
 Fountain of Youth = 青春之泉
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
