--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -96,7 +96,6 @@ Hanging Gardens = Jardines Colgantes
 Colosseum = Coliseo
 
 Terracotta Army = Ejército de terracota
- # Requires translation!
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 'Trata a tus soldados como a tus niños y te seguirán hasta los valles mas profundos; Miralos como a tus amados hijos y estarán a tu lado incluso hasta la muerte' - Sun Tzu
 
 Market = Mercado
@@ -111,13 +110,14 @@ Notre Dame = Notre Dame
 
 Hagia Sophia = Santa Sofía
  # Requires translation!
-'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty' - Procopius, De Aedificis = 'Porque se eleva a las alturas para alcanzar el cielo, y es como si surgiera de entre los demás edificios, se erige en la altura y mira hacia abajo el recordatorio de la ciudad, adornandolo, por que es parte de el, pero glorioso en su propia belleza.' - Procopius, De Aedificis
+'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 
 +33% great person generation in all cities = +33% generación de Grandes Personas en todas las ciudades
 
 Mint = Casa de la moneda
 
 Machu Picchu = Machu Picchu
-'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham ='Pocos romances pueden sobrepasar a la citadela de granito sobre los precipicios sobresalientes de Machu Picchu, la corona de la tierra Inca.' - Hiram Bingham
+ # Requires translation!
+'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = +25% de oro en todas las rutas de comercio
 
 Aqueduct = Acueducto
@@ -914,6 +914,8 @@ May contain [listOfResources] = Puede contener [listOfResources]
 Upgrades to [upgradedUnit] = Mejora a [upgradedUnit]
 Obsolete with [obsoleteTech] = Se hace obsoleto con [obsoleteTech]
 Occurs on [listOfTerrains] = Ocurre en [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Se puede encontrar en
 Improved by [improvement] = Mejorado por [improvement]
 Bonus stats for improvement:  = Bonus de atributos por mejora:
@@ -1106,7 +1108,8 @@ Sailing = Náutica
 'He who commands the sea has command of everything.' - Themistocles = 'Aquel que comanda el mar, tiene el comando de todo'  - Temístocles
 Calendar = Calendario
 'So teach us to number our days, so that we may apply our hearts unto wisdom.' - Bible Psalms 90:12 = 'Entonces enseñanos a enumerar nuestros días, para que podamos aplicar nuestros corazones en la sabiduría' - Biblia Salmo 90:12
- Writing = Escritura
+ # Requires translation!
+Writing = 
 'He who destroys a good book kills reason itself.' - John Milton = 'Aquel que destruye un buen libro mata la razón misma' - John Milton
 Trapping = Caza
 'Even brute beasts and wandering birds do not fall into the same traps or nets twice.' - Saint Jerome = 'Incluso las brutas bestias y los pajaros errantes no caen en las mismas trampas o redes dos veces.' - San Jeronimo 
@@ -1144,7 +1147,8 @@ Physics = Física
 Metal Casting = Fundición
 'When pieces of bronze or gold or iron break, the metal-smith welds them together again in the fire, and the bond is established.' - Sri Guru Granth Sahib = 'Cuando las piezas de bronce, oro o hierro se rompen, el forjador los manipula juntos de nuevo en el fuego y la unión se establece' - Sri guru Granth Sahib
 Steel = Acero
-'John Henry said to his Captain, / 'A man ain't nothin' but a man, / And before I'll let your steam drill beat me down, / I'll die with the hammer in my hand.' - Anonymous: The Ballad of John Henry, the Steel-Drivin' Man = 'John Henry le dijo a su capitán, / 'Un hombre no es más que un hombre, / y antes de que deje a tu taladro de vapor vencerme, /Yo voy a morir con un martillo en la mano' - Anónimo: La bala de John Henrry, el remachador
+ # Requires translation!
+'John Henry said to his Captain, / 'A man ain't nothin' but a man, / And before I'll let your steam drill beat me down, / I'll die with the hammer in my hand.'' - Anonymous: The Ballad of John Henry, the Steel-Drivin' Man = 
 Compass = Brújula
 'I find the great thing in this world is not so much where we stand, as in what direction we are moving.' - Oliver Wendell Holmes = 'Yo encuentro la cosa mas grande en este mundo no donde estamos parados, si no mas bien hacía donde vamos' Oliver Wendell Holmes
 Education = Educación
@@ -1156,7 +1160,8 @@ Machinery = Mecánica
 Astronomy = Astronomía
 'Joyfully to the breeze royal Odysseus spread his sail, and with his rudder skillfully he steered.' - Homer = 'Alegremente a la briza el real Odiseo expandió sus velas y con su timón el habilidosamente dirigió' - Homero
 Acoustics = Acústica
-'Their rising all at once was as the sound of thunder heard remote' - John Milton = 'Su aumento de una vez fue como el sonido del trueno escuchado a distancia' - John Milton
+ # Requires translation!
+'Their rising all at once was as the sound of thunder heard remote' - Milton = 
 Banking = Banca
 'Happiness: a good bank account, a good cook and a good digestion' - Jean Jacques Rousseau = 'Felicidad: Una buena cuenta bancaria, una buena cocina y una buena digestión.' - Jean Jacques Rousseau
 Printing Press = Imprenta
@@ -1208,7 +1213,6 @@ Electronics = Electrónica
 Ballistics = Balística
 'Men, like bullets, go farthest when they are smoothest.' - Jean Paul = 'Los hombres, como las balas, van más lejos cuando son mas suaves' - Jean Paul
 Mass Media = Medios de comunicación
-'The speed of communications is wondrous to behold, it is absolute that speed does multiply the distribution of information that we know to be untrue.' - Edward R. Murrow = 'La velicdad de la comunicación es fascinante de admirar, Es absoluto que la velocidad multiplica la distribución de información que sabemos no es verdad.' - Edward R. Murrow
 Flight = Vuelo
 'Aeronautics was neither an industry nor a science. It was a miracle.' - Igor Sikorsky = "La Aeronautica no fue ni una industria ni una ciencia. Fue un milagro.' - Igor Sikorsky
 'The introduction of so powerful an agent as steam to a carriage on wheels will make a great change in the situation of man.' - Thomas Jefferson = 'La introducción de un agente tan poderoso como el vapor en un caruaje con ruedas hara un gran cambio en la situación del hombre.' - Thomas Jefferson
@@ -1297,6 +1301,12 @@ Rock of Gibraltar = Peñón de Gibraltar
 Cerro de Potosi = Cerro de Potosí
 El Dorado = El Dorado
 Fountain of Youth = Fuente de la juventud
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
