--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -924,6 +924,8 @@ May contain [listOfResources] = 可能擁有以下資源：[listOfResources]
 Upgrades to [upgradedUnit] = 可升級為[upgradedUnit]
 Obsolete with [obsoleteTech] = 研發下列科技後過時：[obsoleteTech]
 Occurs on [listOfTerrains] = 可能出現在以下地形：[listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = 可能發現該資源的地形地貌：
 Improved by [improvement] = 開發該資源所需設施：[improvement]
 Bonus stats for improvement:  = 開發該資源後設施所獲獎勵效果：
@@ -1325,6 +1327,12 @@ Rock of Gibraltar = 直布羅陀巨岩
 Cerro de Potosi = 富饒山
 El Dorado = 黃金國
 Fountain of Youth = 青春之泉
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
