--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -926,6 +926,8 @@ May contain [listOfResources] = kann [listOfResources] enthalten
 Upgrades to [upgradedUnit] = Verbessert sich zu [upgradedUnit]
 Obsolete with [obsoleteTech] = Überflüssig mit [obsoleteTech]
 Occurs on [listOfTerrains] = Kommt vor in [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Kann gefunden werden in
 Improved by [improvement] = Wird verbessert durch [improvement]
 Bonus stats for improvement:  = Boni für Verbesserung: 
@@ -1335,6 +1337,12 @@ Rock of Gibraltar = Felsen von Gibraltar
 Cerro de Potosi = Cerro de Potosí
 El Dorado = El Dorado
 Fountain of Youth = Jungbrunnen
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
