--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1011,6 +1011,8 @@ May contain [listOfResources] = Pode conter [listOfResources]
 Upgrades to [upgradedUnit] = Melhorar para [upgradedUnit]
 Obsolete with [obsoleteTech] = Obsoleta(0) com [obsoleteTech]
 Occurs on [listOfTerrains] = Ocorre em [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Pode ser encontrado em 
 Improved by [improvement] = Melhorado por [improvement]
 Bonus stats for improvement:  = Bonus de estatisticas por melhoria: 
@@ -1510,6 +1512,12 @@ Cerro de Potosi =
 El Dorado = 
  # Requires translation!
 Fountain of Youth = 
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
