--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -912,6 +912,8 @@ May contain [listOfResources] = Может содержать [listOfResources]
 Upgrades to [upgradedUnit] = Улучшается до [upgradedUnit]
 Obsolete with [obsoleteTech] = Устаревает после [obsoleteTech]
 Occurs on [listOfTerrains] = Появляется на [listOfTerrains]
+ # Requires translation!
+Placed on [terrainType] = 
 Can be found on  = Может быть найден в 
 Improved by [improvement] = Улучшен [improvement]
 Bonus stats for improvement:  = Бонусы за улучшение: 
@@ -1294,6 +1296,12 @@ Rock of Gibraltar = Гибралтарская скала
 Cerro de Potosi = гора Серро-де-Потоси
 El Dorado = Эльдорадо
 Fountain of Youth = Фонтан вечной молодости
+
+# Natural Wonders Uniques
+ # Requires translation!
+Grants 500 Gold to the first civilization to discover it = 
+ # Requires translation!
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
