--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -911,6 +911,7 @@ May contain [listOfResources] =
 Upgrades to [upgradedUnit] = 
 Obsolete with [obsoleteTech] = 
 Occurs on [listOfTerrains] = 
+Placed on [terrainType] = 
 Can be found on  = 
 Improved by [improvement] = 
 Bonus stats for improvement:  = 
@@ -1293,6 +1294,11 @@ Rock of Gibraltar =
 Cerro de Potosi = 
 El Dorado = 
 Fountain of Youth = 
+
+# Natural Wonders Uniques
+
+Grants 500 Gold to the first civilization to discover it = 
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
 
 # Resources
 
