--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -156,16 +156,16 @@ Enemy land units must spend 1 extra movement point when inside your territory (o
 
 Workshop = Bengkel
 Longhouse = Bengkel Panjang
-+1 Production from each worked Forest tile = +1 Produksi dari daerah hutan yang diperkerjakan
++1 Production from each worked Forest tile = +1 Produksi dari daerah hutan yang dikelolah
 
 Forge = Penempa Besi
 
 Harbor = Pelabuhan
-+1 production from all sea resources worked by the city = +1 Produksi dari semua sumber daya laut yang diperkerjakan di kota ini
++1 production from all sea resources worked by the city = +1 Produksi dari semua sumber daya laut yang dikelolah di kota ini
 Connects trade routes over water = Menghubungkan rute perdagangan melalui laut
 
 University = Universitas
-+2 Science from each worked Jungle tile = +2 Sains dari setiap daerah Rimba yang diperkerjakan
++2 Science from each worked Jungle tile = +2 Sains dari setiap daerah Rimba yang dikelolah
 Wat = Wat
 
 Oxford University = Universitas Oxford
@@ -199,7 +199,7 @@ Culture in all cities increased by 25% = Budaya di semua kota meningkat sebanyak
 
 Bank = Bank
 Hanse = Hanse
-+5% Production for every Trade Route with a City-State in the empire = +5% Produksi untuk setiap rute perdagangan dengan Negara Bagian di dalam kerajaan
++5% Production for every Trade Route with a City-State in the empire = +5% Produksi untuk setiap rute perdagangan dengan Negara Bagian di dalam negara
 Satrap's Court = Pengadilan Satrap
 
 Forbidden Palace = Istana Terlarang
@@ -229,7 +229,7 @@ Empire enters golden age = Kerajaan memasukki masa keemasan
 Windmill = Kincir Angin
 Must not be on hill = Tidak boleh di bukit
 Museum = Museum
-Hermitage = Pertapaam
+Hermitage = Pertapaan
 
 The Louvre = Louvre
  # Requires translation!
@@ -237,7 +237,7 @@ The Louvre = Louvre
 Free Great Artist Appears = Seniman Hebat gratis muncul
 
 Seaport = Pelabuhan Laut
-+1 production and gold from all sea resources worked by the city = +1 produksi dan emas dari seluruh sumber daya laut yang diperkerjakan di kota
++1 production and gold from all sea resources worked by the city = +1 produksi dan emas dari seluruh sumber daya laut yang dikelolah di kota
 +15% production of naval units = +15% produksi untuk unit laut
 
 Public School = Sekolah Negri
@@ -308,7 +308,7 @@ Manhattan Project = Projek Manhattan
 Enables nuclear weapon = Menciptakan Senjata Nuklir
 
 Apollo Program = Program Apollo
-Enables construction of Spaceship parts = Menghidupkan konstruksi Pesawat Angkasa
+Enables construction of Spaceship parts = Menyediakan konstruksi Pesawat Angkasa
 
 Nuclear Plant = PLTN
 
@@ -343,7 +343,7 @@ War = Perang
 Peace = Damai
 Declare war = Nyatakan perang
 Declare war on [civName]? = Nyatakan perang pada [civName]?
-[civName] has declared war on us! = [civName] has declared war on us
+[civName] has declared war on us! = [civName] telah menyatakan perang pada kita!
 [leaderName] of [nation] = [leaderName] dari [nation]
 You'll pay for this! = Kau akan membayar ini!
 Negotiate Peace = Negosiasikan Perdamaian
@@ -354,7 +354,7 @@ Not this time. = Tidak kali ini.
 Excellent! = Bagus!
 How about something else... = Bagaimana kalau...
 A pleasure to meet you. = Sebuah kehormatan untuk bertemu denganmu.
-Our relationship:  = Hubungan kita
+Our relationship:  = Hubungan kita:
 We have encountered the City-State of [name]! = Kita telah bertemy dengan negara bagian dari [name]
 Declare Friendship ([numberOfTurns] turns) = Nyatakan Pertemanan ([numberOfTurns] turns)
 May our nations forever remain united! = Semoga negara kita selamanya bersatu!
@@ -419,175 +419,175 @@ Cultured =
 Maritime = 
  # Requires translation!
 Mercantile = 
- # Requires translation!
+ # Require translation!
 Militaristic = 
 Type:  = Jenis:
  # Requires translation!
-Influence:  = 
+Influence:  = Pengaruh:
  # Requires translation!
-Reach 30 for friendship. = 
+Reach 30 for friendship. = Capai 30 untuk persahabatan
  # Requires translation!
-Reach highest influence above 60 for alliance. = 
+Reach highest influence above 60 for alliance. = Capai pengaruh diatas 60 untuk persekutuan
  # Requires translation!
-Ally:  = 
+Ally:  = Sekutu:
 
 # Trades 
 
- # Requires translation!
-Trade = 
- # Requires translation!
-Offer trade = 
- # Requires translation!
-Retract offer = 
- # Requires translation!
-What do you have in mind? = 
- # Requires translation!
-Our items = 
- # Requires translation!
-Our trade offer = 
- # Requires translation!
-[otherCiv]'s trade offer = 
- # Requires translation!
-[otherCiv]'s items = 
- # Requires translation!
-Pleasure doing business with you! = 
- # Requires translation!
-I think not. = 
- # Requires translation!
-That is acceptable. = 
+
+Trade = Dagang
+
+Offer trade = Tawarkan
+
+Retract offer = Batalkan tawaran
+
+What do you have in mind? = Apa yang ada dipikiranmu?
+
+Our items = Barang kita
+
+Our trade offer = Tawaran dagang kita
+
+[otherCiv]'s trade offer = Tawaran dagang [otherCiv] 
+
+[otherCiv]'s items = Barang [otherCiv]
+
+Pleasure doing business with you! = Senang berbisnis denganmu!
+
+I think not. = Kurasa tidak.
+
+That is acceptable. = Itu dapat diterima.
 Accept = Terima
- # Requires translation!
-Keep going = 
- # Requires translation!
-There's nothing on the table = 
- # Requires translation!
-Peace Treaty = 
- # Requires translation!
-Agreements = 
- # Requires translation!
-Open Borders = 
- # Requires translation!
-Gold per turn = 
- # Requires translation!
-Cities = 
- # Requires translation!
-Technologies = 
- # Requires translation!
-Declarations of war = 
- # Requires translation!
-Introduction to [nation] = 
- # Requires translation!
-Declare war on [nation] = 
- # Requires translation!
-Luxury resources = 
- # Requires translation!
-Strategic resources = 
- # Requires translation!
-replaces = 
- # Requires translation!
-[resourceName] not required = 
- # Requires translation!
-Lost ability = 
- # Requires translation!
-National ability = 
+
+Keep going = Teruskan
+
+There's nothing on the table = Tak ada apa pun ditabel
+
+Peace Treaty = Perjanjian Perdamaian
+
+Agreements = Perjanjian
+
+Open Borders = Buka Perbatasan
+
+Gold per turn = Emas per giliran
+
+Cities = Kota
+
+Technologies = Teknologi
+
+Declarations of war = Deklarasi perang
+
+Introduction to [nation] = Perkenalan ke [nation]
+
+Declare war on [nation] = Nyatakan perang pada [nation]
+
+Luxury resources = Sumbet daya tersier
+
+Strategic resources = Sumber daya strategis
+
+replaces = tukar
+ 
+[resourceName] not required = [resourceName] tidak dibutuhkan
+
+Lost ability = Hilang kemampuan
+
+National ability = Kemampuan Nasional
 
 # Nations
 
- # Requires translation!
-Babylon = 
- # Requires translation!
-Receive free Great Scientist when you discover Writing, Earn Great Scientists 50% faster = 
- # Requires translation!
-Nebuchadnezzar II = 
 
- # Requires translation!
-Greece = 
- # Requires translation!
-Alexander = 
- # Requires translation!
-City-State Influence degrades at half and recovers at twice the normal rate = 
+Babylon = Babylonia
 
- # Requires translation!
-China = 
- # Requires translation!
-Wu Zetian = 
- # Requires translation!
-Great general provides double combat bonus, and spawns 50% faster = 
+Receive free Great Scientist when you discover Writing, Earn Great Scientists 50% faster = Mendapatkan ilmuan hebat gratis saat menemukan Menulis, Mendapatkan ilmuan hebat lebih 50% cepat
 
- # Requires translation!
-Egypt = 
- # Requires translation!
-Ramesses II = 
- # Requires translation!
-+20% production towards Wonder construction = 
+Nebuchadnezzar II = Nebuchadnezzar ke II
 
- # Requires translation!
-England = 
- # Requires translation!
-Elizabeth = 
- # Requires translation!
-+2 movement for all naval units = 
 
- # Requires translation!
-France = 
- # Requires translation!
-Napoleon = 
- # Requires translation!
-+2 Culture per turn from cities before discovering Steam Power = 
+Greece = Yunani
 
- # Requires translation!
-Russia = 
- # Requires translation!
-Catherine = 
- # Requires translation!
-Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity = 
+Alexander = Alexander
 
- # Requires translation!
-Rome = 
- # Requires translation!
-Augustus Caesar = 
- # Requires translation!
-+25% Production towards any buildings that already exist in the Capital = 
+City-State Influence degrades at half and recovers at twice the normal rate = Pengaruh kota berkurang setengah dan pulih 2 kali lebih cepat
 
- # Requires translation!
-Arabia = 
- # Requires translation!
-Harun al-Rashid = 
- # Requires translation!
-+1 Gold from each Trade Route, Oil resources provide double quantity = 
 
- # Requires translation!
-America = 
- # Requires translation!
-George Washington = 
- # Requires translation!
-All land military units have +1 sight, 50% discount when purchasing tiles = 
+China = Cina
 
- # Requires translation!
-Japan = 
- # Requires translation!
-Oda Nobunaga = 
- # Requires translation!
-Units fight as though they were at full strength even when damaged = 
+Wu Zetian = Wu Zetian
 
- # Requires translation!
-Germany = 
- # Requires translation!
-Otto von Bismark = 
- # Requires translation!
-67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment, -25% land units maintenance. = 
+Great general provides double combat bonus, and spawns 50% faster = Jendral hebat memberikan bonus tempur 2 kali lipat, dan muncul 50% lebih cepat
 
- # Requires translation!
-India = 
- # Requires translation!
-Gandhi = 
- # Requires translation!
-Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 
 
- # Requires translation!
-The Ottomans = 
- # Requires translation!
-Suleiman I = 
+Egypt = Mesir
+
+Ramesses II = Ramses ke II
+
++20% production towards Wonder construction = +20% produksi saat membangun keajaiban dunia
+
+
+England = Inggris
+
+Elizabeth = Elizabeth
+
++2 movement for all naval units = +2 gerakan untuk semua unit laut
+
+
+France = Perancis
+
+Napoleon = Napoleon
+
++2 Culture per turn from cities before discovering Steam Power = +2 Budaya per giliran sebelum menemukan Mesin Uap
+
+
+Russia = Rusia
+
+Catherine = Katerina
+
+Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity = Sumber daya strategis memberikan +1 Produksi, Serta Kuda, Besi dan Uranium memberikan jumlah 2 kali lipat
+
+
+Rome = Roma
+
+Augustus Caesar = Augustus Caesar
+
++25% Production towards any buildings that already exist in the Capital = +25% Produksi untuk setiap bangunan yang sudah ada di Ibukota
+
+
+Arabia = Arab
+
+Harun al-Rashid = Harun al-Rashid
+
++1 Gold from each Trade Route, Oil resources provide double quantity = +1 Emas dari setiap Rute Perdagangan, Minyak memberikan jumlah 2 kali lipat
+
+
+America = Amerika
+
+George Washington = George Washington
+
+All land military units have +1 sight, 50% discount when purchasing tiles = Semua unit darat mendapatkan +1 penglihatan, diskon 50% saat membeli lahan
+
+
+Japan = Jepang
+
+Oda Nobunaga = Oda Nobunaga
+
+Units fight as though they were at full strength even when damaged = Unit bertarung seperti saat darah penuh walaupun terluka
+
+
+Germany = Jerman
+
+Otto von Bismark = Otto von Bismark
+
+67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment, -25% land units maintenance. = Berkemungkinan 67% untuk mendapatkan 25 Emas dan merekrut unit barbarian saat menguasai perkemahan barbarian, -25% biaya unit darat
+
+
+India = India
+
+Gandhi = Mohatma Gandhi
+
+Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 2 kali lipat ketidak bahagiaan dari kota, ketidak bahagiaan dari penduduk berkurang setengah
+
+
+The Ottomans = Ottoman
+
+Suleiman I = Sulaiman ke I
  # Requires translation!
 Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units. = 
 
