--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -96,7 +96,6 @@ Hanging Gardens = Jardines Colgantes
 Colosseum = Coliseo
 
 Terracotta Army = Ejército de terracota
- # Requires translation!
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 'Trata a tus soldados como a tus niños y te seguirán hasta los valles mas profundos; Miralos como a tus amados hijos y estarán a tu lado incluso hasta la muerte' - Sun Tzu
 
 Market = Mercado
@@ -110,7 +109,6 @@ Notre Dame = Notre Dame
 'Architecture has recorded the great ideas of the human race. Not only every religious symbol, but every human thought has its page in that vast book.'  - Victor Hugo = 'La arquitectura ha registrado las grandes ideas de la raza humana. No solo simbólos religiosos, también cada pensamiento humano tiene su página en ese vasto libro.' - Victor Hugo
 
 Hagia Sophia = Santa Sofía
- # Requires translation!
 'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty' - Procopius, De Aedificis = 'Porque se eleva a las alturas para alcanzar el cielo, y es como si surgiera de entre los demás edificios, se erige en la altura y mira hacia abajo el recordatorio de la ciudad, adornandolo, por que es parte de el, pero glorioso en su propia belleza.' - Procopius, De Aedificis
 +33% great person generation in all cities = +33% generación de Grandes Personas en todas las ciudades
 
@@ -684,8 +682,7 @@ We have discovered [naturalWonder]! = ¡Hemos descubierto [naturalWonder]!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Hemos recibido [goldAmount] de oro por descubrir [naturalWonder]
 Your relationship with [cityStateName] is about to degrade = Tus relaciones con [cityStateName] están a punto de empeorar
 Your relationship with [cityStateName] degraded = Tus relaciones con [cityStateName] han empeorado
- # Requires translation!
-A new barbarian encampment has spawned! = 
+A new barbarian encampment has spawned! = ¡Ha aparecido un nuevo campamento bárbaro!
 
 # World Screen UI
 
@@ -922,7 +919,7 @@ Defence bonus = Bonus de defensa
 Movement cost = Coste de movimiento
 Rough Terrain = Terreno abrupto
  for  = para
-Missing translations: = Traducciones faltantes:
+Missing translations: = Traducciones restantes:
 Version = Versión
 Resolution = Resolución
 Tileset = Tileset
